--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   </head>
   <body>
     <div id="app"></div>
+    <div id="modal">
+      
+    </div>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
